--- a/e/eh/eho/ehotelier.com.html
+++ b/e/eh/eho/ehotelier.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ehotelier.com privacy policy that was archived on 2001-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011215091842id_/http%3A//ehotelier.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ehotelier.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603154851id_/http%3A//ehotelier.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html lang="en"><head>
 
@@ -497,7 +497,8 @@
 
 
 
-        - <a target="_top" href="http://ehotelier.com/register.htm">Register</a> -
+        - <a target="_top" href="http://ehotelier.com/register.htm">Free
+        Newsletter</a> -
 
 
 
@@ -529,7 +530,7 @@
 
 
 
-        - <a target="_top" href="http://ehotelier.com/cgi-local/ultraboard/UltraBoard.pl?Session=">Forum</a>
+        - <a href="http://ehotelier.hospitalitycareernet.com">Job Search </a>- <a target="_top" href="http://ehotelier.com/cgi-local/ultraboard/UltraBoard.pl?Session=">Forum</a>
 
 
 
@@ -545,7 +546,7 @@
 
 
 
-        - <a href="http://ehotelier.com/addlink.htm" target="_top">Add a Link</a> -
+        - <a href="http://ehotelier.vstorestuff.com">Shopping</a> - <a href="http://ehotelier.com/addlink.htm" target="_top">Add a Link</a> -
 
 
 
@@ -881,88 +882,40 @@
 
 
 
-	  <a target="_top" href="http://ehotelier.com/browse/chains.htm">Hotel Chains</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/browse/directories.htm">Hotel Directories</a><br>
-
-
-
+      <a href="http://ehotelier.hospitalitycareernet.com">Job Search<br>
+      </a><a target="_top" href="http://ehotelier.com/browse/chains.htm">Hotel
+      Chains</a><br>
+      <a target="_top" href="http://ehotelier.com/browse/directories.htm">Hotel
+      Directories</a><br>
       <a target="_top" href="http://ehotelier.com/browse/associations.htm">Associations</a><br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/magazines.htm">Magazines</a>&nbsp;<br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/books.htm">Books</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/browse/mailregister.htm">Global Hotelier's Mail</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/cgi-local/ultraboard/UltraBoard.pl?Session=">Hoteliers' Forum</a><br>
-
-
-
+      <a target="_top" href="http://ehotelier.com/browse/mailregister.htm">Global
+      Hotelier's Mail</a><br>
+      <a target="_top" href="http://ehotelier.com/cgi-local/ultraboard/UltraBoard.pl?Session=">Hoteliers'
+      Forum</a><br>
       <a target="_top" href="http://ehotelier.com/browse/marketing.htm">Marketing</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/browse/foodbeverage.htm">Food &amp; Beverage</a><br>
-
-
-
+      <a target="_top" href="http://ehotelier.com/browse/foodbeverage.htm">Food
+      &amp; Beverage</a><br>
       <a target="_top" href="http://ehotelier.com/browse/culinary.htm">Culinary</a>&nbsp;<br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/wine.htm">Wine</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/browse/schools.htm">Hotel Schools</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/browse/jobsearch.htm">Job Search</a><br>
-
-
-
+      <a target="_top" href="http://ehotelier.com/browse/schools.htm">Hotel
+      Schools</a><br>
+      <a target="_top" href="http://ehotelier.com/browse/jobsearch.htm">Employment
+      Agents</a><br>
       <a target="_top" href="http://ehotelier.com/browse/hopitalityconsultants.htm">Consultants/Mgmt</a><br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/conventions.htm">Conventions/Events</a><br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/catering.htm">Equipment/Supplies</a><br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/hitech.htm">Technology</a><br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/accounting.htm">Accounting/Finance</a><br>
-
-
-
       <a target="_top" href="http://ehotelier.com/browse/investment.htm">Brokers/Investments</a><br>
-
-
-
-      <a target="_top" href="http://ehotelier.com/browse/coollinks.htm">Cool Links</a><br>
-
-
-
-	  <a target="_top" href="http://ehotelier.com/browse/news.htm">Breaking News</a><br>
-	  <a target="_top" href="http://ehotelier.com/browse/NewsArchive.htm">News Archive</a>
+      <a target="_top" href="http://ehotelier.com/browse/coollinks.htm">Cool
+      Links</a><br>
+      <a target="_top" href="http://ehotelier.com/browse/news.htm">Breaking
+      News</a><br>
+      <a target="_top" href="http://ehotelier.com/browse/NewsArchive2.htm">News
+      Archive</a><a target="_top" href="http://ehotelier.com/browse/NewsArchive.htm"><br>
+      </a><a href="http://ehotelier.vstorestuff.com">eHotelier Store</a>
 
 
 
@@ -1052,9 +1005,11 @@
 
 
 <img src="http://service.bfast.com/bfast/serve?bfmid=26690590&amp;siteid=38557467&amp;bfpage=homepage" border="0" nosave="">
- <a href="http://service.bfast.com/bfast/click?bfmid=26690590&amp;siteid=38557467&amp;bfpage=homepage"><font size="1"></font></a><font size="1"><a href="http://www.qksrv.net/click-863120-5057380" target="_blank" onmouseover="window.status='http://www.all-hotels.com';return true;" onmouseout="window.status=' ';return true;"><img src="http://www.qksrv.net/image-863120-5057380" alt="www.all-hotels.com" border="0" width="120" height="60"></a><br>
-<a href="http://www.qksrv.net/click-863120-5057380">
- For online bookings Click Here</a></font>
+&nbsp;
+ <a href="http://service.bfast.com/bfast/click?bfmid=26690590&amp;siteid=38557467&amp;bfpage=homepage"><font size="1"></font></a><font size="1"><br>
+<a href="http://ehotelier.hospitalitycareernet.com"><img border="0" src="http://ehotelier.com/banners/Globaljobs.gif" width="130" height="70"><br>
+For Jobs Click Here</a>
+</font>
 
 
 
@@ -3406,7 +3361,10 @@
 
 
 
-<p class="footer"><a href="http://ehotelier.com/index.htm" target="_top">Home</a> | <a target="_top" href="http://ehotelier.com/register.htm">Register</a> | <a href="http://ehotelier.com/feedback.htm" target="_top">Feedback</a> | <a target="_top" href="http://ehotelier.com/cgi-local/ultraboard/UltraBoard.pl?Session=">Forum</a> | <a href="http://ehotelier.com/addlink.htm" target="_top">Add a Link</a> | <a href="http://ehotelier.com/brokenlink.htm" target="_top">Report a Broken Link</a></p>
+<p class="footer"><a href="http://ehotelier.com/index.htm" target="_top">Home</a> | <a target="_top" href="http://ehotelier.com/register.htm">Free
+Newsletter</a> | <a href="http://ehotelier.com/feedback.htm" target="_top">Feedback</a> |
+<a href="http://ehotelier.hospitalitycareernet.com">Job Search </a>| <a target="_top" href="http://ehotelier.com/cgi-local/ultraboard/UltraBoard.pl?Session=">Forum</a> |
+<a href="http://ehotelier.vstorestuff.com">Shopping</a> | <a href="http://ehotelier.com/addlink.htm" target="_top">Add a Link</a> | <a href="http://ehotelier.com/brokenlink.htm" target="_top">Report a Broken Link</a></p>
 
 <p class="footer"><br>© 2000-2001 ehotelier.com<br>Visit our mirror Sites: <a href="http://ehotelier.org">ehotelier.org</a> and <a href="http://ehotelier.net">ehotelier.net</a></p>
 
@@ -3518,7 +3476,7 @@ document.write('</A>');
 
 //-->
 
-</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=5771"><img border="0" width="1" height="1" src="http://statse.webtrendslive.com/S000-00-4-2-119734-7721/button3.asp?tagver=3&amp;SiteId=5771&amp;Sid=000-00-4-2-119734-7721&amp;Tz=1000&amp;firstwkday=sunday&amp;Edition=enterprise&amp;Button=&amp;server=&amp;order=&amp;Group=&amp;browserDate=Fri%20Jan%2031%202020%2001%3A13%3A11%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=Hotels%20and%20Hotel%20Chains%2C%20Culinary%20Art%2C%20Food%20and%20Beverage%2C%20Hotel-industry%20Related%20Job%20Search%3A%20Global%20Information%20and%20News%20Directory&amp;url=https://web.archive.org/web/20011215091842id_/http%3A//ehotelier.com/privacy.htm&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
+</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=5771"><img border="0" width="1" height="1" src="http://statse.webtrendslive.com/S000-00-4-2-119734-7721/button3.asp?tagver=3&amp;SiteId=5771&amp;Sid=000-00-4-2-119734-7721&amp;Tz=1000&amp;firstwkday=sunday&amp;Edition=enterprise&amp;Button=&amp;server=&amp;order=&amp;Group=&amp;browserDate=Fri%20Jan%2031%202020%2001%3A13%3A12%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=Hotels%20and%20Hotel%20Chains%2C%20Culinary%20Art%2C%20Food%20and%20Beverage%2C%20Hotel-industry%20Related%20Job%20Search%3A%20Global%20Information%20and%20News%20Directory&amp;url=https://web.archive.org/web/20020603154851id_/http%3A//ehotelier.com/privacy.htm&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
 
 
 
