--- a/o/ow/owe/owenscorning.com.html
+++ b/o/ow/owe/owenscorning.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the owenscorning.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205065825id_/http%3A//owenscorning.com/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the owenscorning.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603160359id_/http%3A//www.owenscorning.com/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Owens Corning's Internet Privacy Policy</title>
