--- a/o/or/orl/orlandoinfo.com.html
+++ b/o/or/orl/orlandoinfo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the orlandoinfo.com privacy policy that was archived on 2001-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011127170209id_/http%3A//www.orlandoinfo.com/other/privacy/index.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the orlandoinfo.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603160828id_/http%3A//www.orlandoinfo.com/other/privacy/index.cfm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Orlandoinfo.com</title>
@@ -31,7 +31,8 @@
       <div align="center"> 
         <p><img src="../../IMAGES/main/top_officialsite.gif" width="262" height="28"> 
           <br>
-          <a href="/magicard"><img src="../../IMAGES/main/button_request.gif" width="109" height="57" alt="Request FREE Vacation Info!" border="0"></a><a href="http://www.orlandoinfo.com/maps/travelheromap.cfm"><img src="../../IMAGES/main/button_book.gif" width="109" height="57" alt="Book Your Trip Now!" border="0"></a><a href="/contest"><img src="../../IMAGES/main/button_win.gif" width="109" height="57" alt="Enter to Win A Trip!" border="0"></a></p>
+          
+<a href="http://www.orlandoinfo.com/magicard/index.cfm"><img src="http://www.orlandoinfo.com/images/new-buttons/free-info.gif" width="99" height="58" border="0"></a><a href="http://www.orlandoinfo.com/booking/index.cfm"><img src="http://www.orlandoinfo.com/images/new-buttons/book-vacation.gif" width="99" height="58" border="0"></a><a href="http://www.orlandoinfo.com/contest/index.cfm"><img src="http://www.orlandoinfo.com/images/new-buttons/win-vacation.gif" width="99" height="58" border="0"></a><a href="http://www.orlandoinfo.com/ads.cfm?LinkAffiliateID=B841B248-54B7-457F-B28E3AEEAEED0C54" target="_blank"><img src="http://www.orlandoinfo.com/images/new-buttons/discount-tickets.gif" width="99" height="58" border="0"></a></p>
       </div>
     </td>
     <td height="69"><img src="../../IMAGES/main/shim.gif" width="1" height="106" border="0"></td>
@@ -42,98 +43,110 @@
     <td height="20">&nbsp;</td>
   </tr>
   <tr valign="top"><!-- row 3 --> 
-    <td> 
-      <div align="center"> 
-        <p><img src="../../IMAGES/main/shim.gif" width="128" height="8" border="0"><br>
-          <a href="/index.cfm"><img src="../../IMAGES/main/home.gif" width="109" height="32" alt="Home" border="0"></a><br>
-          <a href="/accommodations"><img src="../../IMAGES/main/accomm.gif" width="109" height="32" alt="Accommodations" border="0"></a><br>
-          <a href="/attractions"><img src="../../IMAGES/main/attract.gif" width="109" height="32" alt="Attractions" border="0"><br>
-          </a><a href="/dining"><img src="../../IMAGES/main/dining.gif" width="109" height="32" alt="Dining" border="0"></a><br>
-          <a href="/shopping"><img src="../../IMAGES/main/shopping.gif" width="109" height="32" alt="Shopping" border="0"></a><br>
-          <a href="/nightlife"><img src="../../IMAGES/main/nightlife.gif" width="107" height="32" alt="Nightlife" border="0"></a><br>
-          <a href="/artsculture"><img src="../../IMAGES/main/art_culture.gif" width="109" height="32" alt="Arts &amp; Culture" border="0"></a><br>
-          <a href="/recreation"><img src="../../IMAGES/main/recreation.gif" width="109" height="32" alt="Recreation" border="0"></a></p>
-        <p align="left"><img src="../../IMAGES/main/head_other.gif" width="121" height="22"></p>
-        <p align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="/transportation">Transportation 
-          </a><br><a href="/other/calendar">Calendar of Events</a><br>
-          <a href="/maps">Maps </a><br>
-          <a href="/surveys">Survey</a><br>
-          <a href="/other/values">Special Values</a><br>
-          <a href="/other/weather">Weather</a><br>
-          <a href="/other/specialneeds">Special Needs</a><br>
-          <a href="/other/weddings">Weddings</a><br>
-          <a href="/other/seniors">Seniors</a> </font></p>
-      </div>
+    <td> 	<div align="center">
+	<img src="/images/main/shim.gif" width="128" height="8" border="0"><br>
+	  
+	  
+
+   
+
+	<a href="http://www.orlandoinfo.com/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/home.gif" width="109" height="32" alt="Home" border="0"></a><br>
+  <a href="http://www.orlandoinfo.com/accommodations/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/accomm.gif" width="109" height="32" alt="Accommodations" border="0"></a><br>
+  <a href="http://www.orlandoinfo.com/attractions/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/attract.gif" width="109" height="32" alt="Attractions" border="0"><br>
+  </a><a href="http://www.orlandoinfo.com/dining/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/dining.gif" width="109" height="32" alt="Dining" border="0"></a><br>
+  <a href="http://www.orlandoinfo.com/shopping/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/shopping.gif" width="109" height="32" alt="Shopping" border="0"></a><br>
+  <a href="http://www.orlandoinfo.com/nightlife/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/nightlife.gif" width="107" height="32" alt="Nightlife" border="0"></a><br>
+  <a href="http://www.orlandoinfo.com/artsculture/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/art_culture.gif" width="109" height="32" alt="Arts &amp; Culture" border="0"></a><br>
+  <a href="http://www.orlandoinfo.com/recreation/index.cfm"><img src="http://www.orlandoinfo.com/IMAGES/main/recreation.gif" width="109" height="32" alt="Recreation" border="0"></a>
+<p align="left"><img src="http://www.orlandoinfo.com/IMAGES/main/head_other.gif" width="121" height="22">
+</p><p align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="http://www.orlandoinfo.com/transportation/index.cfm">Transportation 
+  </a><br>
+  <a href="http://www.orlandoinfo.com/other/ovc/index.cfm">Visitor Center</a><br>
+  <a href="http://www.orlandoinfo.com/other/calendar/index.cfm">Calendar of Events</a><br>
+  <a href="http://www.orlandoinfo.com/maps/index.cfm">Maps </a><br>
+  <a href="http://www.orlandoinfo.com/surveys/index.cfm">Survey</a><br>
+  <a href="http://www.orlandoinfo.com/other/values/index.cfm">Special Values</a><br>
+  <a href="http://www.orlandoinfo.com/other/weather/index.cfm">Weather</a><br>
+  <a href="http://www.orlandoinfo.com/other/specialneeds/index.cfm">Special Needs</a><br>
+  <a href="http://www.orlandoinfo.com/other/weddings/index.cfm">Weddings</a><br>
+  <a href="http://www.orlandoinfo.com/other/seniors/index.cfm">Seniors</a></font></p>
+      
+	 
+	  </div>
     </td>
     <td colspan="3"> 
-      <p><img src="../../IMAGES/main/shim.gif" width="330" height="8" border="0"><font face="Arial" size="2"><br>
-        </font><span style="font-size:10.0pt;font-family:Arial">For each visitor
-      to our Web page, our Web server automatically recognizes only the
-      consumer's domain name.<br>
-      <br>
-      We collect the e-mail addresses of those who communicate with us via
-      e-mail; aggregate information on what pages consumers access or visit; and
-      information volunteered by the consumer, such as survey information and/or
-      site registrations.<br>
-      <br>
-      The information we collect is used to improve the content of our Web page
-      and shared with other reputable organizations to help them contact
-      consumers for marketing purposes.<span style="mso-spacerun: yes">&nbsp; </span>It
-      is not shared with other organizations for commercial purposes.<span style="mso-spacerun:
-yes">&nbsp; </span>We send out free vacation information packages to mailing
-      addresses (upon request).<br>
-      <br>
-      We do not set any cookies.<br>
-      <br>
-      If you do not want to receive e-mail from us in the future, please let us
-      know by sending us e-mail at <a href="mailto:feedback@orlandocvb.com">feedback@orlandocvb.com</a>.<br>
-      <br>
-      If you supply us with your postal address on-line you will receive only
-      the information for which you provided us your address.<br>
-      <br>
-      We do not partner with or have special relationships with any ad server
-      companies.<br>
-      <br>
-      From time to time, we may use customer information for new, unanticipated
-      uses not previously disclosed in our privacy notice. If our information
-      practices change at some time in the future we will post the policy
-      changes to our Web site to notify you of these changes and provide you
-      with the ability to opt out of these new uses. If you are concerned about
-      how your information is used, you should check back at our Web site
-      periodically.<br>
-      <br>
-      Customers may prevent their information from being used for purposes other
-      than those for which it was originally collected by emailing us at <a href="mailto:feedback@orlandocvb.com">feedback@orlandocvb.com</a>.<br>
-      <br>
-      We have appropriate security measures in place in our physical facilities
-      to protect against the loss, misuse or alteration of information that we
-      have collected from you at our site.<br>
-      <br>
-      If you feel that this site is not following its stated information policy,
-      you may contact us at <a href="mailto:feedback@orlandocvb.com">feedback@orlandocvb.com</a>.</span><font size="2" face="Arial, Helvetica, sans-serif"> <br>
-        </font> <font face="Arial" size="2"><br>
-        </font></p>
-      <p>&nbsp;</p>
+	  <p><img src="../../IMAGES/main/shim.gif" width="330" height="8" border="0"><font face="Arial" size="2"><br>
+		</font><span style="font-size:10.0pt;font-family:Arial">For each visitor 
+		to our Web page, our Web server automatically recognizes only the consumer's 
+		domain name.<br>
+		<br>
+		We collect the e-mail addresses of those who communicate with us via e-mail; 
+		aggregate information on what pages consumers access or visit; and information 
+		volunteered by the consumer, such as survey information and/or site registrations.<br>
+		<br>
+		The information we collect is used to improve the content of our Web page 
+		and shared with other reputable organizations to help them contact consumers 
+		for marketing purposes.<span style="mso-spacerun: yes">&nbsp; </span>It 
+		is not shared with other organizations for commercial purposes.<span style="mso-spacerun:
+yes">&nbsp; </span>We send out free vacation information packages to mailing addresses 
+		(upon request).<br>
+		<br>
+		We do not set any cookies.<br>
+		<br>
+		If you do not want to receive e-mail from us in the future, please let 
+		us know by sending us e-mail at <a href="mailto:feedback@orlandocvb.com">feedback@orlandocvb.com</a>.<br>
+		<br>
+		If you supply us with your postal address on-line you will receive only 
+		the information for which you provided us your address.<br>
+		<br>
+		We do not partner with or have special relationships with any ad server 
+		companies.<br>
+		<br>
+		From time to time, we may use customer information for new, unanticipated 
+		uses not previously disclosed in our privacy notice. If our information 
+		practices change at some time in the future we will post the policy changes 
+		to our Web site to notify you of these changes and provide you with the 
+		ability to opt out of these new uses. If you are concerned about how your 
+		information is used, you should check back at our Web site periodically.<br>
+		<br>
+		Customers may prevent their information from being used for purposes other 
+		than those for which it was originally collected by emailing us at <a href="mailto:feedback@orlandocvb.com">feedback@orlandocvb.com</a>.<br>
+		<br>
+		We have appropriate security measures in place in our physical facilities 
+		to protect against the loss, misuse or alteration of information that 
+		we have collected from you at our site.<br>
+		<br>
+		If you feel that this site is not following its stated information policy, 
+		you may contact us at <a href="mailto:feedback@orlandocvb.com">feedback@orlandocvb.com</a>.</span><font size="2" face="Arial, Helvetica, sans-serif"> 
+		<br>
+		</font> <br>
+	  </p>
       </td>
     <td><img src="../../IMAGES/main/shim.gif" width="1" height="450" border="0"></td>
   </tr>
   <!--   This HTML was automatically created with Macromedia Fireworks 3.0   --> 
   <!--   http://www.macromedia.com   --> 
 </tbody></table>
+	
+
+<div align="left">
+   
 <table width="600" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr> 
     <td>&nbsp; </td>
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td> 
-      <div align="center"><font face="Arial, Helvetica, sans-serif" size="1">©2001 
-        Orlando/Orange County Convention &amp; Visitors Bureau, Inc. | <a href="http://www.orlandoinfo.com/other/terms">Terms of Service</a> | </font><font size="1" face="Arial, Helvetica, sans-serif"><a href="http://www.orlandoinfo.com/other/privacy">Privacy 
-        Policy</a> | <a href="http://www.orlandoinfo.com/other/contactus">Contact 
-        Us</a></font></div>
+      <div align="center"><font face="Arial, Helvetica, sans-serif" size="1">© 
+		2002 Orlando/Orange County Convention &amp; 
+		Visitors Bureau, Inc. | <a href="/other/terms/index.cfm">Terms of Service</a> 
+		| </font><font size="1" face="Arial, Helvetica, sans-serif"><a href="/other/privacy/index.cfm">Privacy 
+		Policy</a> | <a href="/other/contactus/index.cfm">Contact Us</a></font></div>
     </td>
   </tr>
 </tbody></table>
 
+</div>
 <p>&nbsp;</p>
 
 
